--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -1,17 +1,27 @@
 {
   "compilerOptions": {
+    "target": "es5",
     "module": "commonjs",
     "noImplicitAny": false,
     "noImplicitThis": false,
     "strictNullChecks": false,
     "strictFunctionTypes": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "../",
-    "typeRoots": ["../"],
-    "types": ["react"],
-    "noEmit": true,
+    "typeRoots": ["src/definitions"],
+    "types": ["react", "react-dom", "node", "jest"],
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
-    "jsxFactory": "createElement"
+    "jsx": "react",
+    "allowJs": true
   },
-  "files": ["src/index.d.ts"]
+  "include": ["../src/**/*", "../stories/**/*"],
+  "exclude": [
+    "node_modules",
+    ".circleci",
+    ".github",
+    ".cache",
+    "coverage",
+    "docs"
+  ]
 }
