--- a/package.json
+++ b/package.json
@@ -36,32 +36,38 @@
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-class-properties": "7.2.3",
-    "@babel/preset-env": "7.2.3",
+    "@babel/plugin-proposal-class-properties": "7.3.0",
+    "@babel/preset-env": "7.3.1",
     "@babel/preset-react": "7.0.0",
-    "@storybook/react": "4.1.6",
-    "all-contributors-cli": "5.7.0",
+    "@storybook/react": "4.1.11",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^10.12.24",
+    "@types/react": "^16.8.2",
+    "@types/react-dom": "^16.8.0",
+    "all-contributors-cli": "6.1.1",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "23.6.0",
+    "babel-jest": "24.1.0",
     "babel-loader": "8.0.5",
     "copy-webpack-plugin": "4.6.0",
-    "enzyme": "3.7.0",
-    "enzyme-adapter-react-16": "1.6.0",
-    "eslint": "5.12.0",
+    "enzyme": "3.8.0",
+    "enzyme-adapter-react-16": "1.9.1",
+    "eslint": "5.13.0",
     "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "3.3.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.12.3",
+    "eslint-config-prettier": "4.0.0",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
     "husky": "1.3.1",
-    "jest": "23.6.0",
-    "lint-staged": "8.1.0",
-    "prettier": "1.15.3",
-    "react": "16.7.0",
-    "react-dom": "16.7.0",
-    "react-testing-library": "5.4.4",
-    "webpack": "4.28.4",
-    "webpack-cli": "3.2.1"
+    "jest": "24.1.0",
+    "lint-staged": "8.1.3",
+    "prettier": "1.16.4",
+    "react": "16.8.1",
+    "react-dom": "16.8.1",
+    "react-testing-library": "5.5.4",
+    "ts-loader": "5.3.3",
+    "typescript": "^3.3.3",
+    "webpack": "4.29.3",
+    "webpack-cli": "3.2.3"
   },
   "jest": {
     "setupFiles": [
